@@ -102,7 +102,7 @@ OS X:
 ---------------------------------	
 You should also be able to use CPAN.pm to install this module if you like.
 
-Problems (read this before sending mail)
+Problems (read this before filing a bug)
 ----------------------------------------
 
 Please, do not send bug report before you have
